adding faq accordians

--- a/index.html
+++ b/index.html
@@ -165,89 +165,136 @@
             <a href="./static/rosehack-2019-sponsorship.pdf" target="_blank">sponsorship package</a>.
         </p>
     </section>
-
     <section id="faqs" class="background-gray">
         <h1>FAQs</h1>
         <div class="faq-container">
-            <div class="faq">
-                <h2>What is a Rose Hack?</h2>
-                <p>
-                    Rose Hack is a 24-hour hackathon open to high school and undergraduates with priority towards women
-                    and other underrepresented groups in tech.
-                </p>
+            <div class="half">
+                <div class="tab">
+                    <input id="0" type="checkbox" name="tabs">
+                    <label for="0">What is a hackathon?</label>
+                    <div class="tab-content">
+                        <p>
+                            A hackathon is a technology-focused event where individuals and teams work on new projects
+                            in a short period of time. You can build anything you want. An app, a robot, a website. The
+                            only limit is your imagination!
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="1" type="checkbox" name="tabs">
+                    <label for="1">What is Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is a 24-hour hackathon open to high school and undergraduates with priority
+                            towards women
+                            and other underrepresented groups in tech.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="2" type="checkbox" name="tabs">
+                    <label for="2">How much does attending cost?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks
+                            and a
+                            place to sleep.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="3" type="checkbox" name="tabs">
+                    <label for="3">Where is Rose Hack hosted?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is hosted in sunny California at the University of California, Riverside.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="4" type="checkbox" name="tabs">
+                    <label for="4">How do I get to Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            Participants will be provided with parking permits to park at UC Riverside for free. We are
+                            working with our sponsors to add travel reimbursment as a benefit for participants.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="5" type="checkbox" name="tabs">
+                    <label for="5">Can I participate?</label>
+                    <div class="tab-content">
+                        <p>
+                            If you are a high school or undergraduate student in any major, we'd love to see you here!
+                        </p>
+                    </div>
+                </div>
+
             </div>
-            <div class="faq">
-                <h2>How much does attending cost?</h2>
-                <p>
-                    Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks and a
-                    place to sleep.
-                </p>
+            <div class="half">
+                <div class="tab">
+                    <input id="6" type="checkbox" name="tabs">
+                    <label for="6">Where is Rose Hack hosted?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is hosted in sunny California at the University of California, Riverside.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="7" type="checkbox" name="tabs">
+                    <label for="7">How many people can be on a team?</label>
+                    <div class="tab-content">
+                        <p>
+                            Teams can have up to 4 people.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="8" type="checkbox" name="tabs">
+                    <label for="8">Can I start hacking before Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            All projects for Rose Hack must be made during the weekend. Planning and gathering
+                            resources before the hackathon is allowed. We will be enforcing this to ensure a fair
+                            hackathon.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="9" type="checkbox" name="tabs">
+                    <label for="9">Will there be workshops?</label>
+                    <div class="tab-content">
+                        <p>
+                            There will be workshops throughout the event! Want to learn iOS, web development, data
+                            science, or anything else? Send us a message and we'll try our best to host a workshop for
+                            that topic.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="9" type="checkbox" name="tabs">
+                    <label for="9">What do I need to bring?</label>
+                    <div class="tab-content">
+                        <p>
+                            Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you
+                            need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that for
+                            you!
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="10" type="checkbox" name="tabs">
+                    <label for="10">I still have a question?</label>
+                    <div class="tab-content">
+                        <p>
+                            Send us a <a href="mailto:hello@rosehack.com">message</a>!
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="faq">
-                <h2>Where is Rose Hack?</h2>
-                <p>
-                    Rose Hack is hosted in sunny California at the University of California, Riverside.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>Is there travel reimbursment?</h2>
-                <p>
-                    We are working our hardest to provide this benefit.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>Can I participate?</h2>
-                <p>
-                    If you are a high school or undergraduate woman, we'd love to see you here!
-                </p>
-            </div>
-            <div class="faq">
-                <h2>How do I apply?</h2>
-                <p>
-                    Applications will be opening up in September 2018. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X"
-                        rel="noopener">mailing
-                        list</a>.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>How many people can be on a team?</h2>
-                <p>
-                    Teams can be up to 4 people.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>Can I hack remotely?</h2>
-                <p>
-                    Unfortunately, you will have to be present in person to participate.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>Can I work on my project before Rose Hack?</h2>
-                <p>
-                    All projects for Rose Hack must be made during the weekend. Planning and gathering resources before
-                    the hackathon is allowed.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>Will there be workshops?</h2>
-                <p>
-                    There will be workshops throughout the event! Want to learn iOS, web development, data science, or
-                    anything else? Send us a message and we'll try our best to host a workshop for that topic.
-                </p>
-            </div>
-            <div class="faq">
-                <h2>What do I need to bring?</h2>
-                <p>
-                    Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you need for 24
-                    hours of hacking. No need to bring snacks or food, we'll have tons of that for you!
-                </p>
-            </div>
-            <div class="faq">
-                <h2>I still have questions!</h2>
-                <p>
-                    Send us a <a href="mailto:hello@rosehack.com">message</a>!
-                </p>
-            </div>
+
         </div>
     </section>
 
@@ -269,22 +316,14 @@
         </div>
         <p>Built with 🌹 in Riverside, California</p>
     </footer>
+
     <audio src="./static/darude.mp3" class="konami-music"></audio>
     <script src="./js/bodymovin.js"></script>
     <script src="./js/hero-animation.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124411502-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-124411502-1');
-    </script>
-    <script>
-        console.log('%cWhy hello there! Interested in web dev? Join the team! Send us a message at hello@rosehack.com', 'font-size: 30px; background: red; color: white;')
-    </script>
-    <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
     <script src="./js/disco.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
