fixing mobile layout

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="hero-text">
             <p>January 19-20, 2019</p>
             <p class="location">UC Riverside's Women-centric Hackathon</p>
-            <a class="typeform-share button" href="https://rosehack.typeform.com/to/wRygPb" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#89BC62;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+            <a class="typeform-share button cta-button" href="https://rosehack.typeform.com/to/wRygPb" data-mode="popup"
+                style="display:inline-block;text-decoration:none;background-color:#89BC62;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
                 target="_blank">Register</a>
         </div>
 
@@ -233,15 +234,6 @@
 
             </div>
             <div class="half">
-                <div class="tab">
-                    <input id="6" type="checkbox" name="tabs">
-                    <label for="6">Where is Rose Hack hosted?</label>
-                    <div class="tab-content">
-                        <p>
-                            Rose Hack is hosted in sunny California at the University of California, Riverside.
-                        </p>
-                    </div>
-                </div>
                 <div class="tab">
                     <input id="7" type="checkbox" name="tabs">
                     <label for="7">How many people can be on a team?</label>
