adding hvmn logo

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
             <a href="https://www.digitalocean.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/digitalocean.png" alt="Digital Ocean">
             </a>
+            <a href="https://hvmn.com/go-cubes" target="_blank" rel="noopener">
+                <img class="sponsor" src="./img/hvmn.png" alt="HVMN">
+            </a>
         </div>
         <p class="sponsor-cta">
             Interested in sponsoring Rose Hack 2019? Reach out to
