--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <a href="https://mlab.com/" target="_blank" class="moon-shadow" rel="noopener">
                 <img class="sponsor" src="./img/mlab.png" alt="mLab">
             </a>
+            <a href="https://www.l3t.com" target="_blank" class="venus" rel="noopener">
+                <img class="sponsor" src="./img/L3.png" alt="L3">
+            </a>
             <a href="https://www.esri.com/en-us/home" target="_blank" class="bluenette" rel="noopener">
                 <img class="sponsor" src="./img/esri.png" alt="Esri">
             </a>
