change link styles

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3xy_e89TQzlXLq0b-t0ZbGKg_97pvQKBiyy0CsDueSxHYQA/viewform" target="_blank">
                     <img class="form-img" src="./images/cup.png" alt="Workshop Application">
                 </a>
-                <p>Workshop<br />Leader?</p>
+                <p>Workshop Leader?</p>
             </div>
             <div class="row-item">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdW2pbGE231WPNwHm7lZifIdXVXGQWdVEdY6YNM2C2ISgi_Ig/viewform" target="_blank">
