adding google as a sponsor

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <a href="https://mlab.com/" target="_blank" class="moon-shadow" rel="noopener">
                 <img class="sponsor" src="./img/mlab.png" alt="mLab">
             </a>
+            <a href="https://careers.google.com/students/" target="_blank" class="moon-shadow" rel="noopener">
+                <img class="sponsor" src="./img/google.png" alt="Google">
+            </a>
             <a href="https://www.l3t.com" target="_blank" class="venus" rel="noopener">
                 <img class="sponsor" src="./img/L3.png" alt="L3">
             </a>
@@ -162,7 +165,7 @@
             <a href="https://www.digitalocean.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/digitalocean.png" alt="Digital Ocean">
             </a>
-           
+
         </div>
         <p class="sponsor-cta">
             Interested in sponsoring Rose Hack 2019? Reach out to
