--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 </head>
 
 <body>
+    <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000"
+        href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white"
+        target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg"
+            alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
     <div class="hero">
         <div class="hero-overlay">
             <img class="hero-logo" src="./img/rosehacklogo.png" alt="Rose Hack Logo">
@@ -307,6 +311,16 @@
                             Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you
                             need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that for
                             you!
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="15" type="checkbox" name="tabs">
+                    <label for="15">Is there a Code of Conduct?</label>
+                    <div class="tab-content">
+                        <p>
+                            Yes! As a MLH sanctioned hackathon, we adhere and enforce the <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH
+                                Code of Conduct</a> to ensure all participants have a good experience.
                         </p>
                     </div>
                 </div>
