adding aside for involvement forms, updating stat for participants

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <section class="background-teal">
         <h1>Can I 🐝 A...</h1>
+        <p>Want to be involved in other ways?</p>
         <div class="row forms">
             <div class="row-item">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScAowKlhHtkNEA9l5r1Kivl7QouUOyPMmiW-1W0Gn4CaiKEmA/viewform"
@@ -124,8 +125,8 @@
                 <p>Hours</p>
             </div>
             <div class="row-item">
-                <h2>21</h2>
-                <p>Organizers</p>
+                <h2>20+</h2>
+                <p>Supporters</p>
             </div>
         </div>
     </section>
