--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row-item">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdW2pbGE231WPNwHm7lZifIdXVXGQWdVEdY6YNM2C2ISgi_Ig/viewform" target="_blank">
-                    <img class="form-img" src="./images/rose.png" alt="Volunteer Application">
+                    <img class="form-img" src="./images/flower.png" alt="Volunteer Application">
                 </a>
                 <p>Volunteer?</p>
             </div>
