add autodesk as a sponsor

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
             <a href="https://www.linode.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/linode.png" alt="Linode">
             </a>
+            <a href="https://www.autodesk.com/"target="_blank" rel="noopener">
+                <img class="sponsor" src="./img/autodesk.png" alt="AutoDesk">
+            </a>
             <a href="https://www.typeform.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/typeform.png" alt="Typeform">
             </a>
