adding hackathon video to faq

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <label for="0">What is a hackathon?</label>
                     <div class="tab-content">
                         <p>
-                            A hackathon is a technology-focused event where individuals and teams work on new projects
+                          A <a href="https://www.youtube.com/watch?v=qj4DQfYx2Hg">hackathon</a> is a technology-focused event where individuals and teams work on new projects
                             in a short period of time. You can build anything you want. An app, a robot, a website. The
                             only limit is your imagination!
                         </p>
