fixing hackathon video link

--- a/index.html
+++ b/index.html
@@ -220,131 +220,130 @@
                     <label for="0">What is a hackathon?</label>
                     <div class="tab-content">
                         <p>
-                            A <a hrefhackathon is a technology-focused event where individuals and teams work on new
-                                projects in a short period of time. You can build anything you want. An app, a robot, a
-                                website. The only limit is your imagination! </p> </div> </div> <div class="tab">
-                                <input id="1" type="checkbox" name="tabs">
-                                <label for="1">What is Rose Hack?</label>
-                                <div class="tab-content">
-                                    <p>
-                                        Rose Hack is a 24-hour hackathon open to high school and undergraduates with
-                                        priority
-                                        towards women
-                                        and other underrepresented groups in tech.
-                                    </p>
-                                </div>
+                            A <a href="https://www.youtube.com/watch?v=qj4DQfYx2Hg">hackathon</a>
+                            is a technology-focused event where individuals and teams work on new projects
+                            in a short period of time. You can build anything you want. An app, a robot, a website. The
+                            only limit is your imagination!
+                        </p>
                     </div>
-                    <div class="tab">
-                        <input id="2" type="checkbox" name="tabs">
-                        <label for="2">How much does attending cost?</label>
-                        <div class="tab-content">
-                            <p>
-                                Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals,
-                                drinks
-                                and a
-                                place to sleep.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tab">
-                        <input id="3" type="checkbox" name="tabs">
-                        <label for="3">Where is Rose Hack hosted?</label>
-                        <div class="tab-content">
-                            <p>
-                                Rose Hack is hosted in sunny California at the University of California, Riverside.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tab">
-                        <input id="4" type="checkbox" name="tabs">
-                        <label for="4">How do I get to Rose Hack?</label>
-                        <div class="tab-content">
-                            <p>
-                                Participants will be provided with parking permits to park at UC Riverside for free. We
-                                are
-                                working with our sponsors to add travel reimbursment as a benefit for participants.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tab">
-                        <input id="5" type="checkbox" name="tabs">
-                        <label for="5">Can I participate?</label>
-                        <div class="tab-content">
-                            <p>
-                                If you are a high school or undergraduate student in any major, we'd love to see you
-                                here!
-                            </p>
-                        </div>
-                    </div>
-
                 </div>
-                <div class="half">
-                    <div class="tab">
-                        <input id="7" type="checkbox" name="tabs">
-                        <label for="7">How many people can be on a team?</label>
-                        <div class="tab-content">
-                            <p>
-                                Teams can have up to 4 people.
-                            </p>
-                        </div>
+                <div class="tab">
+                    <input id="1" type="checkbox" name="tabs">
+                    <label for="1">What is Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is a 24-hour hackathon open to high school and undergraduates with priority
+                            towards women
+                            and other underrepresented groups in tech.
+                        </p>
                     </div>
-                    <div class="tab">
-                        <input id="8" type="checkbox" name="tabs">
-                        <label for="8">Can I start hacking before Rose Hack?</label>
-                        <div class="tab-content">
-                            <p>
-                                All projects for Rose Hack must be made during the weekend. Planning and gathering
-                                resources before the hackathon is allowed. We will be enforcing this to ensure a fair
-                                hackathon.
-                            </p>
-                        </div>
+                </div>
+                <div class="tab">
+                    <input id="2" type="checkbox" name="tabs">
+                    <label for="2">How much does attending cost?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks
+                            and a
+                            place to sleep.
+                        </p>
                     </div>
-                    <div class="tab">
-                        <input id="9" type="checkbox" name="tabs">
-                        <label for="9">Will there be workshops?</label>
-                        <div class="tab-content">
-                            <p>
-                                There will be workshops throughout the event! Want to learn iOS, web development, data
-                                science, or anything else? Send us a message and we'll try our best to host a workshop
-                                for
-                                that topic.
-                            </p>
-                        </div>
+                </div>
+                <div class="tab">
+                    <input id="3" type="checkbox" name="tabs">
+                    <label for="3">Where is Rose Hack hosted?</label>
+                    <div class="tab-content">
+                        <p>
+                            Rose Hack is hosted in sunny California at the University of California, Riverside.
+                        </p>
                     </div>
-                    <div class="tab">
-                        <input id="11" type="checkbox" name="tabs">
-                        <label for="11">What do I need to bring?</label>
-                        <div class="tab-content">
-                            <p>
-                                Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you
-                                need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that
-                                for
-                                you!
-                            </p>
-                        </div>
+                </div>
+                <div class="tab">
+                    <input id="4" type="checkbox" name="tabs">
+                    <label for="4">How do I get to Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            Participants will be provided with parking permits to park at UC Riverside for free. We are
+                            working with our sponsors to add travel reimbursment as a benefit for participants.
+                        </p>
                     </div>
-                    <div class="tab">
-                        <input id="15" type="checkbox" name="tabs">
-                        <label for="15">Is there a Code of Conduct?</label>
-                        <div class="tab-content">
-                            <p>
-                                Yes! As a MLH sanctioned hackathon, we adhere and enforce the <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH
-                                    Code of Conduct</a> to ensure all participants have a good experience.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tab">
-                        <input id="10" type="checkbox" name="tabs">
-                        <label for="10">I still have a question?</label>
-                        <div class="tab-content">
-                            <p>
-                                Send us a <a href="mailto:hello@rosehack.com">message</a>!
-                            </p>
-                        </div>
+                </div>
+                <div class="tab">
+                    <input id="5" type="checkbox" name="tabs">
+                    <label for="5">Can I participate?</label>
+                    <div class="tab-content">
+                        <p>
+                            If you are a high school or undergraduate student in any major, we'd love to see you here!
+                        </p>
                     </div>
                 </div>
 
             </div>
+            <div class="half">
+                <div class="tab">
+                    <input id="7" type="checkbox" name="tabs">
+                    <label for="7">How many people can be on a team?</label>
+                    <div class="tab-content">
+                        <p>
+                            Teams can have up to 4 people.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="8" type="checkbox" name="tabs">
+                    <label for="8">Can I start hacking before Rose Hack?</label>
+                    <div class="tab-content">
+                        <p>
+                            All projects for Rose Hack must be made during the weekend. Planning and gathering
+                            resources before the hackathon is allowed. We will be enforcing this to ensure a fair
+                            hackathon.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="9" type="checkbox" name="tabs">
+                    <label for="9">Will there be workshops?</label>
+                    <div class="tab-content">
+                        <p>
+                            There will be workshops throughout the event! Want to learn iOS, web development, data
+                            science, or anything else? Send us a message and we'll try our best to host a workshop for
+                            that topic.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="11" type="checkbox" name="tabs">
+                    <label for="11">What do I need to bring?</label>
+                    <div class="tab-content">
+                        <p>
+                            Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you
+                            need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that for
+                            you!
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="15" type="checkbox" name="tabs">
+                    <label for="15">Is there a Code of Conduct?</label>
+                    <div class="tab-content">
+                        <p>
+                            Yes! As a MLH sanctioned hackathon, we adhere and enforce the <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH
+                                Code of Conduct</a> to ensure all participants have a good experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input id="10" type="checkbox" name="tabs">
+                    <label for="10">I still have a question?</label>
+                    <div class="tab-content">
+                        <p>
+                            Send us a <a href="mailto:hello@rosehack.com">message</a>!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <footer>
