adding basalmiq as a sponsor

--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
         <a href="http://stickermule.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/stickermule.svg" alt="Sticker Mule" />
         </a>
+        <a href="https://balsamiq.com/" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/balsamiq.png" alt="Balsamiq" />
+        </a>
       </div>
       <p class="sponsor-cta">
         Interested in sponsoring Rose Hack 2019? Reach out to
