change mlab logo to mongoDB logo

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           class="moon-shadow"
           rel="noopener"
         >
-          <img class="sponsor" src="./img/mlab.png" alt="mLab" />
+          <img class="sponsor" src="./img/mongoDB.png" alt="MongoDB" />
         </a>
         <a
           href="https://careers.google.com/students/"
