change href link from mlab to mongodb

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <img class="sponsor" src="./img/github.png" alt="GitHub" />
         </a>
         <a
-          href="https://mlab.com/"
+          href="https://www.mongodb.com"
           target="_blank"
           class="moon-shadow"
           rel="noopener"
