add macys tech as sponsor

--- a/index.html
+++ b/index.html
@@ -226,6 +226,14 @@
           <img class="sponsor" src="./img/L3.png" alt="L3" />
         </a>
         <a
+          href="http://technology.macysjobs.com"
+          target="_blank"
+          class="venus"
+          rel="noopener"
+        >
+          <img class="sponsor" src="./img/macys-tech.png" alt="L3" />
+        </a>
+        <a
           href="https://www.esri.com/en-us/home"
           target="_blank"
           class="bluenette"
