--- a/index.html
+++ b/index.html
@@ -513,47 +513,51 @@
           <!-- Meet the Organizers -->
           <p style="font-family: 'Arvo','serif';font-size:1.2em;margin-bottom: 5%;margin-left:13%;text-align:center">Lead Organizers</p>
           <div class="row">
-            <a href="http://wendyli.net" class="organizer">
+            <a href="http://wendyli.net" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/H75ME3m.jpg">
               <span class="org-name">Wendy Li</span>
             </a>
-            <a href="https://www.linkedin.com/in/emily-huang-221ab4134/" class="organizer">
-              <img class="org-img" src="https://t1.ea.ltmcdn.com/en/images/1/6/9/img_how_to_stop_my_shiba_inu_from_biting_me_961_600_square.jpg">
+            <a href="https://www.linkedin.com/in/emily-huang-221ab4134/" class="organizer hvr-float-shadow">
+              <img class="org-img" src="https://i.imgur.com/M29Jxhz.jpg">
               <span class="org-name">Emily Huang</span>
             </a>
-            <a href="https://www.linkedin.com/in/stephanie-italiaie-638086167/" class="organizer">
+            <a href="https://www.linkedin.com/in/stephanie-italiaie-638086167/" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/EUhZteU.jpg">
               <span class="org-name">Stephanie Italiaie</span>
             </a>
           </div>
           
           <div class="row">
-            <a href="https://www.linkedin.com/in/janine-huang/" class="organizer">
+            <a href="https://www.linkedin.com/in/janine-huang/" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/7NsqfLI.jpg">
               <span class="org-name">Janine Huang</span>
             </a>
-            <a href="https://www.linkedin.com/in/stephanieqian/" class="organizer">
+            <a href="https://www.linkedin.com/in/stephanieqian/" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/wHooFDi.jpg">
               <span class="org-name">Stephanie Qian</span>
             </a>
-            <a href="https://www.linkedin.com/in/duongnatalie/" class="organizer">
+            <a href="https://www.linkedin.com/in/duongnatalie/" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/9lqyIhO.jpg">
               <span class="org-name">Natalie Duong</span>
             </a>
           </div>
 
           <div class="row">
-            <a href="http://johnpham.net" class="organizer">
+            <a href="http://johnpham.net" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/0vVYtwG.jpg">
               <span class="org-name">John Pham</span>
             </a>
-            <a href="https://www.linkedin.com/in/harini-venkatesan-784436169/" class="organizer">
-              <img class="org-img" src="https://t1.ea.ltmcdn.com/en/images/1/6/9/img_how_to_stop_my_shiba_inu_from_biting_me_961_600_square.jpg">
+            <a href="https://www.linkedin.com/in/harini-venkatesan-784436169/" class="organizer hvr-float-shadow">
+              <img class="org-img" src="https://i.imgur.com/yWDssnM.jpg">
               <span class="org-name">Harini Venkatesan</span>
             </a>
-            <a href="http://bball24.me/" class="organizer">
-              <img class="org-img" src="https://t1.ea.ltmcdn.com/en/images/1/6/9/img_how_to_stop_my_shiba_inu_from_biting_me_961_600_square.jpg">
+            <a href="http://bball24.me/" class="organizer hvr-float-shadow">
+              <img class="org-img" src="https://i.imgur.com/4QAjdRU.jpg">
               <span class="org-name">Jerry Tan</span>
+            </a>
+            <a href="#" class="organizer hvr-float-shadow">
+              <img src="https://i.imgur.com/wPhoYIZ.jpg" alt="Smokey Reggiano" class="org-img">
+              <p class="org-name">Smokey</p>
             </a>
           </div>
 
