--- a/index.html
+++ b/index.html
@@ -352,13 +352,14 @@
         <a href="https://www.rxbar.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/rxbar.png" alt="RXBar" />
         </a>
-        <a href="https://www.ae.com/" target="_blank" rel="noopener">
+        <!--<a href="https://www.ae.com/" target="_blank" rel="noopener">
           <img
             class="sponsor"
             src="./img/american-eagle.svg"
             alt="American Eagle"
           />
         </a>
+        --->
       </div>
       <p class="sponsor-cta">
         Interested in sponsoring Rose Hack 2019? Reach out to
