updating about section for more inclusive language

--- a/index.html
+++ b/index.html
@@ -101,29 +101,13 @@
           src="./img/coffee.png"
           alt="Image of Coffee Cup"
         />
-        Rose Hack is the first women-centric hackathon at the University of
-        California, Riverside. Founded by the female leaders of the
-        <a href="http://winc.cs.ucr.edu/"
-          >Association of Computing Machinery (ACM-W)</a
-        >
-        and the
-        <a href="http://ucrswe.weebly.com/">Society of Women Engineers (SWE)</a
-        >, Rose Hack will be a community where women in STEM can feel supported
-        in sharing and expressing their ideas.
+        Rose Hack is UC Riverside’s first women-centric hackathon*, founded by the female leaders of the <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery</a> (ACM-W) and the <a href="http://ucrswe.weebly.com/">Society of Women Engineers</a> (SWE). Rose Hack’s mission is to encourage individuals from underrepresented groups in STEM to create a strong network together through their shared passions in Science and Technology.
+
       </p>
       <p>
-        Our mission at Rose Hack is to encourage individuals from
-        underrepresented groups in STEM to gain experience, build confidence,
-        and create a strong network together.
+        Come for a lively weekend of innovation, face masks, discovering and creating new technology, networking, mentorship, and much more.
       </p>
-      <p>
-        Rose Hack is a 24-hour hackathon hosted at
-        <a
-          href="https://www.google.com/maps/place/Winston+Chung+Hall,+Riverside,+CA+92507/@33.975265,-117.3281288,17z/data=!3m1!4b1!4m5!3m4!1s0x80dcae5acf0fa1e7:0xa67be5dc0009c039!8m2!3d33.975265!4d-117.3259401"
-          >Winston Chung Hall at the University of California Riverside</a
-        >. This is the first women-centric hackathon in the region!
-      </p>
-      <p>Rose Hack welcomes all undergraduate and high school students.</p>
+      <p style="color: #bcbcbc; font-size: 14px;"><em>* Rose Hack is completely beginner friendly for high school and undergraduate students of all races, gender, and sexuality.</em></p>
     </section>
 
     <section class="background-teal">
