removing ae, adding botanical gardens as a sponsor

--- a/index.html
+++ b/index.html
@@ -336,14 +336,9 @@
         <a href="https://www.rxbar.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/rxbar.png" alt="RXBar" />
         </a>
-        <!--<a href="https://www.ae.com/" target="_blank" rel="noopener">
-          <img
-            class="sponsor"
-            src="./img/american-eagle.svg"
-            alt="American Eagle"
-          />
+        <a href="https://gardens.ucr.edu/" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/botanic-gardens.jpg" alt="UCR Botanical Gardens" />
         </a>
-        --->
       </div>
       <p class="sponsor-cta">
         Interested in sponsoring Rose Hack 2019? Reach out to
