add lyft as a sponsor

--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
           <img class="sponsor" src="./img/autodesk.png" alt="AutoDesk" />
         </a>
         <a
+          href="https://www.lyft.com"
+          target="_blank"
+          rel="noopener"
+          class="bluenette"
+        >
+          <img class="sponsor" src="./img/Lyft.png" alt="Lyft" />
+        </a>
+
+        <a
           href="http://ucrswe.weebly.com/"
           target="_blank"
           class="bluenette"
