change href link to lyft careers

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <img class="sponsor" src="./img/autodesk.png" alt="AutoDesk" />
         </a>
         <a
-          href="https://www.lyft.com"
+          href="https://www.lyft.com/careers"
           target="_blank"
           rel="noopener"
           class="bluenette"
