--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
         </a>
         <a href="https://www.linode.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/linode.png" alt="Linode" />
+
+        <a href="https://jumpstart.me/" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/jumpstart.png" alt="Jumpstart" />
         </a>
         <a href="https://www.typeform.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/typeform.png" alt="Typeform" />
