--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
         >
           <img class="sponsor" src="./img/L3.png" alt="L3" />
         </a>
+        <a class="venus" href="https://cloud.google.com/" target="_blank" rel="noopener">
+          <img
+            class="sponsor"
+            src="./img/gcp.png"
+            alt="Google Cloud Platform"
+          />
+        </a>
         <a
           href="http://technology.macysjobs.com"
           target="_blank"
@@ -258,13 +265,6 @@
             class="sponsor"
             src="./img/snapchat.png"
             alt="Snapchat Spectacles"
-          />
-        </a>
-        <a href="https://cloud.google.com/" target="_blank" rel="noopener">
-          <img
-            class="sponsor"
-            src="./img/gcp.png"
-            alt="Google Cloud Platform"
           />
         </a>
         <a href="https://framer.com/" target="_blank" rel="noopener">
@@ -350,6 +350,15 @@
         </a>
         <a href="https://gardens.ucr.edu/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/botanic-gardens.jpg" alt="UCR Botanical Gardens" />
+        </a>
+        <a href="https://www.unclechuangsbakery.com/" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/chuangs.png" alt="Uncle Chuang's Bakery" />
+        </a>
+        <a href="https://starbucks.com" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/starbucks.png" alt="Starbucks" />
+        </a>
+        <a href="https://www.zesttea.com/" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/zestea.png" alt="Zest Tea" />
         </a>
       </div>
       <p class="sponsor-cta">
